src/kudu/consensus/log_cache-test.cc
@@ -172,6 +172,12 @@ TEST_F(LogCacheTest, TestAlwaysYieldsAtLeastOneMessage) {
   OpId preceding;
   ASSERT_OK(cache_->ReadOps(0, 100, &messages, &preceding));
   ASSERT_EQ(1, messages.size());
+
+  // Should yield one op also in the 'cache miss' case.
+  messages.clear();
+  cache_->EvictThroughOp(50);
+  ASSERT_OK(cache_->ReadOps(0, 100, &messages, &preceding));
+  ASSERT_EQ(1, messages.size());
 }
 
 // Tests that the cache returns Status::NotFound() if queried for messages after an
